--- a/app/assets/stylesheets/glass/_manifest-backend.scss
+++ b/app/assets/stylesheets/glass/_manifest-backend.scss
@@ -20,5 +20,6 @@
 @import "glass/partials/components/icons";
 @import "glass/partials/components/icon-styles";
 @import "glass/partials/components/images";
+@import "glass/partials/components/onboarding";
 @import "glass/partials/components/ui-elements";
 @import "glass/partials/components/grande-menu";
