--- a/app/assets/stylesheets/glass/partials/components/_onboarding.scss
+++ b/app/assets/stylesheets/glass/partials/components/_onboarding.scss
@@ -130,12 +130,11 @@
   #preview-area {
   	calc(100% - 10px);
   	height: 175px;
-  	padding: 15px;
-  	padding-bottom: 0;
+  	padding: 15px 15px 0 15px;
   	overflow: hidden;
   	display: flex;
   	align-items: center;
-  	font-weight: 600px;
+  	font-weight: 600;
   }
   
   #cover-carousel .carousel-inner > .item {
