--- a/app/assets/stylesheets/glass/partials/components/_icons.scss
+++ b/app/assets/stylesheets/glass/partials/components/_icons.scss
@@ -220,3 +220,9 @@
 .gcicon-code:before {
   content: ",";
 }
+.gcicon-caret-left:before {
+  content: "-";
+}
+.gcicon-caret-right:before {
+  content: ".";
+}
