--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_form.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_form.html.erb
@@ -20,7 +20,9 @@ ENDHTML
 
 <% if include_live_editor? -%>
 <div class="page-options">
-  <div>
+  <div class="page-status">
+    <span>Status: <strong>Draft</strong></span>
+  </div>
 <% else -%>
 <div class="row">
   <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
