--- a/app/assets/stylesheets/glass/partials/components/_onboarding.scss
+++ b/app/assets/stylesheets/glass/partials/components/_onboarding.scss
@@ -1,24 +1,3 @@
-.fancy-form {
-	.large-label {
-		font-size: 32px;
-		color: $grey-6;
-		margin-top: 75px;
-		line-height: 1.6;
-		&:after {
-			margin: 35px auto;
-			width: 100px;
-			display: block;
-			border-bottom: 6px solid $primary-color;
-			content: "";
-		}
-	}
-	.input-lg {
-		font-size: 32px;
-	}
-}
-
-
-
 /* -------------------- ONBOARDING -------------------- */
 
 .onboarding-menu{
@@ -90,7 +69,34 @@
     font-size: 160px;
     display: block;
     margin: 0 auto 15px;
+    text-align: center;
   }
+  hr{
+    height: 2px;
+  }
+	.large-label, .lesson h1 {
+		font-size: 32px;
+		color: $grey-6;
+		margin-top: 75px;
+		line-height: 1.6;
+		&:after {
+			margin: 35px auto;
+			width: 100px;
+			display: block;
+			border-bottom: 6px solid $primary-color;
+			content: "";
+		}
+	}
+	.input-lg {
+		font-size: 32px;
+	}
+  .onboarding-footer {
+		margin-top: 75px;
+		margin-bottom: 90px;
+		hr{
+  		margin-bottom: 60px;
+		}
+	}
 }
 
 #org-setup-nav {
@@ -109,12 +115,6 @@
 				background-color: limegreen;
 			}
 		}
-	}
-}
-
-#form-wrapper {
-	.form-footer {
-		margin-top: 75px;
 	}
 }
 
@@ -139,6 +139,35 @@
 		background-color: $primary-hover !important;
 	}
 }
+
+.lesson{
+  .step-display{
+    padding: 5px 20px !important;
+  }  
+  .previous-step{
+    font-size: 32px;
+    top: -8px;
+    position: absolute;
+    left: -40px;
+    color: $grey-5;
+    &:hover{
+      cursor: pointer;
+      color: $primary-hover;
+    }
+  }
+  .next-step{
+    font-size: 32px;
+    top: -8px;
+    position: absolute;
+    right: -40px;
+    color: $grey-5;
+    &:hover{
+      cursor: pointer;
+      color: $primary-hover;
+    }
+  }
+}
+
 
 
 /* -------------------- COVER IMAGE PICKER -------------------- */
