--- a/app/assets/stylesheets/glass/partials/components/_onboarding.scss
+++ b/app/assets/stylesheets/glass/partials/components/_onboarding.scss
@@ -64,6 +64,11 @@
     font-size: 21px;
     line-height: 1.8em;
   }
+  ul{
+    text-align: left;
+    font-size: 21px;
+    line-height: 1.8em;
+  }
   .feature-icon{
     color: $grey-2;
     font-size: 160px;
