Make error messages readable

--- a/app/assets/stylesheets/canvas/config/_base-variables.scss
+++ b/app/assets/stylesheets/canvas/config/_base-variables.scss
@@ -25,6 +25,7 @@ $beige: #e1dcd9;
 $brown: #8c8987;
 $red: #a94442;
 $red-fade: #bf4d4b;
+$red-bg: #ffdfcf;
 $green: #5bc890;
 $mint: #5bc9a9;
 $yellow: #e9ad19;
