--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1054,7 +1054,7 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
 
 #error_explanation,
 .errorExplanation{
-  background-color: $red-fade;
+  background-color: $red-bg;
 }
 
 #error_explanation,
