--- a/app/assets/stylesheets/glass/partials/components/_onboarding.scss
+++ b/app/assets/stylesheets/glass/partials/components/_onboarding.scss
@@ -271,6 +271,7 @@
   		padding: 0; 
   		padding-top: 66%; 		
   		overflow: hidden;
+  		cursor: pointer;
   		img {
   			opacity: 0.9;
   			border-radius: $radius;
