--- a/app/assets/stylesheets/glass/partials/components/_onboarding.scss
+++ b/app/assets/stylesheets/glass/partials/components/_onboarding.scss
@@ -24,7 +24,7 @@
       transition: $transition;
     }
     .icon{
-      margin: 0 auto 5px;
+      margin: 5px auto 5px;
       display: block;
       font-size: 24px;
     }
