--- a/app/views/refinery/admin/_menu.html.erb
+++ b/app/views/refinery/admin/_menu.html.erb
@@ -1,8 +1,9 @@
 <ul class="list-unstyled">
   <!-- NOTE: refinery/glass/plugin_sorter.rb helps with this sorting -->
   <% ::Refinery::Plugins.active.in_menu.find_all{|p| p.position > 0}.sort_by {|p| p.position}.each do |plugin| -%>
-    <li>
+    <% next if plugin.show_for_superuser_only && !current_refinery_user.has_role?(:superuser) %>
 
+    <li>
       <%= link_to "<i class='#{plugin.icon}'></i> #{plugin.title}".html_safe, refinery.url_for(plugin.url),
         :class => ("active" if plugin.highlighted?(params)),
         :id => "plugin_#{plugin.name}" %>
@@ -11,14 +12,4 @@
       <% end %>
     </li>
   <% end -%>
-  <% if ::Refinery::Plugins.active.in_menu.many? -%>
-    <%#= link_to refinery_icon_tag('arrow_switch.png'), "",
-      :id => "menu_reorder",
-      :title => t('.reorder_menu') %>
-
-    <%#= link_to refinery_icon_tag('tick.png'), "",
-      :id => "menu_reorder_done",
-      :title => t('.reorder_menu_done'),
-      :style => "display: none;" %>
-  <% end %>
 </ul>
