next-step styling given to next-lesson

--- a/app/assets/stylesheets/glass/partials/components/_onboarding.scss
+++ b/app/assets/stylesheets/glass/partials/components/_onboarding.scss
@@ -193,7 +193,7 @@
       color: $primary-hover;
     }
   }
-  .next-step{
+  .next-step, .next-lesson{
     font-size: 32px;
     top: -8px;
     position: absolute;
