--- a/app/assets/stylesheets/canvas/config/_base-variables.scss
+++ b/app/assets/stylesheets/canvas/config/_base-variables.scss
@@ -28,7 +28,7 @@ $red-fade: #bf4d4b;
 $red-bg: #ffdfcf;
 $green: #5bc890;
 $mint: #5bc9a9;
-$yellow: #e9ad19;
+$yellow: #fec641;
 $yellow-fade: #EEE28D;
 $orange: #e99c00;
 $start: rgba(0,0,0,0.12);
