--- a/app/assets/stylesheets/glass/partials/components/_onboarding.scss
+++ b/app/assets/stylesheets/glass/partials/components/_onboarding.scss
@@ -23,6 +23,9 @@
     .gcicon{
       transition: $transition;
     }
+    .gcicon-check{
+      display: none;
+    }
     .icon{
       margin: 5px auto 5px;
       display: block;
@@ -32,6 +35,7 @@
       box-shadow: none;
       .gcicon-check{
         color: $green;
+        display: inline;
       }
       &:hover{
         color: $primary-hover;
@@ -48,6 +52,9 @@
         color: $primary-hover;
         .gcicon{
           color: $primary-hover;
+        }
+        .gcicon-check{
+          display: inline;
         }
       }
     }
@@ -95,6 +102,9 @@
 	.step-heading{
   	.step-display{
     	border: 0 !important;
+    	.next-step, .next-lesson, .previous-step, .previous-lesson{
+      	top: 15px;
+    	}
     	span{
       	font-size: 32px;
         color: $grey-6;
@@ -203,7 +213,7 @@
 
   .next-step, .next-lesson, .previous-step, .previous-lesson{
     font-size: 32px;
-    top: 15px;
+    top: 5px;
     position: absolute;
     color: $grey-5;
     &:hover{
