--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -44,13 +44,15 @@ html
   <body class="<%= yield :body_class %> <%= action_name %> <%= I18n.locale %> <%= 'small-sidebar' if !is_admin_preview_page && !@hide_main_nav %>">
     <%#= render '/glass/alerts_status' %>
     <%= render 'refinery/admin/custom_layout' %>
+
     <%= yield :body_top %>
+
     <% if !defined?(@hide_main_nav) || !@hide_main_nav %> 
       <section id="sidebar-left" class="ui sidebar left overlay">
         <div class="sidebar-top-nav">
           <div class="site-name">
-            <% if current_refinery_user.org.present? %>
-              <i class="gcicon gcicon-glass-canvas hidden"></i><a href="<%= "/#{current_refinery_user.org.slug}" %>" target="_blank">My Site</a>
+            <% if content_for?(:custom_sidebar_header_link) %>
+              <%= yield :custom_sidebar_header_link %>
             <% else %>
               <i class="gcicon gcicon-glass-canvas hidden"></i> <%= link_to Refinery::Core.site_name, '/' %>
             <% end %>
@@ -63,7 +65,9 @@ html
                     refinery.logout_path, :id => 'logout', :class => 'log-out' %>
       </section>
     <% end %>
-    
+
+
+
     <% if content_for?(:admin_sidebar) %>
       <section id="sidebar-right" class="ui sidebar overlay right">
         <div class="sidebar-top-nav">
@@ -111,7 +115,9 @@ html
 
       <%= render 'refinery/admin/glass/modal' %>
     </section>
-    
+
+    <%= yield :body_bottom %>
+
     <%= render partial: '/glass/javascripts', locals: {admin: true} %>
   </body>
 </html>
