--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -214,12 +214,12 @@ body{
   #sidebar-right-inner{
     width: 350px;
     height: calc(100% - 62px);
-    padding: 15px 0 60px;
+    padding: 0 0 60px;
     top: 62px;
     overflow-y: scroll;
     overflow-x: hidden;
     .page-options{
-      padding: 0 15px;
+      padding: 0 0;
       *[contenteditable=true]{
         color: $primary-dark;
         &:focus{
@@ -248,7 +248,6 @@ body{
       .url{
         font-weight: 600;
         color: $grey-5;
-        margin-bottom: 30px;
         word-wrap: break-word;
         span{
           padding-bottom: 1px;
@@ -408,7 +407,6 @@ body{
         }
       }
       .collapse-toggle{
-        display: block;
         margin-bottom: 0;
         width: 100%;
         text-align: left;
@@ -429,9 +427,39 @@ body{
           color: darken($red, 15%);
         }
       }
+      .upload-preview-container{
+        padding-top: 60%;
+        margin: 0 -15px;
+        .file-preview{
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          margin: 0;
+          width: 100%;
+          background-size: cover !important;
+        }
+      }
     }
   }
 }
+
+.sidebar{
+  .sidebar-section{
+    border-bottom: 1px solid $grey-3;
+    &:last-child{
+      border: 0;
+    }
+    .sidebar-section-inner{
+      padding: 15px;
+      display: flex;
+      align-items: center;
+    }
+  }
+}
+
+
 
 /* -------------------- COMPONENTS -------------------- */
 
