Stop user from deleting the '+' circle

--- a/app/views/glass/_html_editing_assets.html.erb
+++ b/app/views/glass/_html_editing_assets.html.erb
@@ -1,5 +1,5 @@
 <div id="glass-parking" style="display: none;">
-  <a id="glass-module-switcher" href="" class="circle-icon add-module glass-control singleton transitionable" contenteditable=false><i class="gcicon gcicon-plus"></i></a>
+  <a id="glass-module-switcher-template" href="" class="circle-icon add-module glass-control singleton transitionable" contenteditable=false><i class="gcicon gcicon-plus"></i></a>
   <div id="glass-choose-module" class="new-module media-chooser clear glass-control singleton" contenteditable=false>
     <a href="" id="glass-choose-module-img" class="circle-icon media-type"><i class="gcicon gcicon-photo bump-down"></i></a>
     <a href="" id="glass-choose-module-vid" class="circle-icon media-type"><i class="gcicon gcicon-film"></i></a>
