--- a/app/assets/stylesheets/glass/partials/components/_images.scss
+++ b/app/assets/stylesheets/glass/partials/components/_images.scss
@@ -45,8 +45,8 @@
   display: none;
   text-align:left;
   position: absolute;
-  bottom: 10px;
-  left: 0;
+  top: 5px;
+  left: 5px;
 	.status-text {
 		top: 2px;
 		left: 50%;
@@ -58,7 +58,7 @@
 	}
 }
 .progress {
-	width: 98%;
+	width: calc(100% - 10px);
 	padding-left: 1%;
 	padding-right: 1%;
 	z-index: 998;
