--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -507,12 +507,24 @@ body{
           margin-right: 10px;
         }
       }
+      h3{
+        margin: 30px 0 0 0;
+        font-size: 21px;
+        color: $grey-5;
+        font-weight: 500;
+      }
     }
     .sidebar-section-body{
       padding: 0 15px 15px;
-      .form-group{
-        margin: 0;
+      &-sm{
+        padding: 5px 15px;
       }
+      input[type="checkbox"]{
+        top: 2px;
+      }
+    }
+    .form-group{
+      margin: 0;
     }
   }
 }
