Add "click pads" for inserting <p>'s before and after content
 - refactored the insert module functionality that was there

--- a/app/assets/stylesheets/glass/partials/layout/_editor.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_editor.scss
@@ -86,3 +86,23 @@
     padding-right: 60px;
   }
 }
+
+.click-pads {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  .click-pad {
+    width: 100%;
+    height: 20px;
+    cursor: text;
+    position: absolute;
+    &.top {
+      top: -20px;
+    }
+    &.bottom {
+      bottom: -20px;
+    }
+  }
+}
