--- a/app/views/glass/_html_editing_assets.html.erb
+++ b/app/views/glass/_html_editing_assets.html.erb
@@ -18,9 +18,13 @@
       </div>
     </form>
   </div>
-  <button class="circle-icon delete-module glass-control"><i class="gcicon gcicon-trash"></i></button>
+  <button class="circle-icon delete-module glass-control append" contenteditable=false><i class="gcicon gcicon-trash"></i></button>
+  <div class="click-pads glass-control append" contenteditable=false>
+    <div class="click-pad top"></div>
+    <div class="click-pad bottom"></div>
+  </div>
 
-  <div id="glass-module-vid-template" class="outer-video">
+  <div id="glass-module-vid-template" class="outer-video glass-no-edit" contenteditable=false>
     <div class="video-wrapper">
       <iframe data-video-link="" src="" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" scrolling="no" hspace="0">
       </iframe>
