--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -214,7 +214,7 @@ body{
   #sidebar-right-inner{
     width: 350px;
     height: calc(100% - 62px);
-    padding: 0 0 60px;
+    padding: 0;
     top: 62px;
     overflow-y: scroll;
     overflow-x: hidden;
