Make the bottom click-pad the correct height
 - didn't account for padding - video-wrapper makes this difficult
 - Still need to do top, right & left

--- a/app/views/glass/_html_editing_assets.html.erb
+++ b/app/views/glass/_html_editing_assets.html.erb
@@ -24,11 +24,9 @@
     <div class="click-pad bottom"></div>
   </div>
 
-  <div id="glass-module-vid-template" class="outer-video glass-no-edit" contenteditable=false>
-    <div class="video-wrapper">
-      <iframe data-video-link="" src="" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" scrolling="no" hspace="0">
-      </iframe>
-    </div>
+  <div id="glass-module-vid-template" class="video-wrapper glass-no-edit" contenteditable=false>
+    <iframe data-video-link="" src="" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" scrolling="no" hspace="0">
+    </iframe>
   </div>
 
   <div id="glass-module-img-template" class="inline-editable-image-container glass-no-edit" contenteditable=false>
