--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -281,6 +281,10 @@ p::-moz-selection {
   width: 100%;
 }
 
+.no-border{
+  border: none !important;
+}
+
 
 
 /* -------------------- ELEMENTS -------------------- */
