--- a/app/views/refinery/admin/pages/_form.html.erb
+++ b/app/views/refinery/admin/pages/_form.html.erb
@@ -79,7 +79,7 @@
     <%= render 'form_advanced_options', :f => f %>
     <%# FIXME = render 'form_advanced_options_seo', :f => f %>
 
-    <%= render '/refinery/admin/form_actions', :f => f, :sidebar => false,
+    <%= render '/refinery/admin/form_actions', :f => f, :sidebar => true,
                :continue_editing => true,
                :delete_title => t('delete', :scope => 'refinery.admin.pages'),
                :delete_confirmation => t('message', :scope => 'refinery.admin.delete', :title => @page.title),
