--- a/app/views/refinery/admin/_form_actions.html.erb
+++ b/app/views/refinery/admin/_form_actions.html.erb
@@ -88,7 +88,7 @@
                 :data => {
                   :confirm => delete_confirmation
                 },
-                :class => "btn btn-default btn-lg") unless hide_delete %>
+                :class => "btn btn-link-red btn-lg") unless hide_delete %>
     <%= local_assigns[:after_delete_button] -%>
   </div>
 </div>
