--- a/app/views/refinery/admin/pages/_form.html.erb
+++ b/app/views/refinery/admin/pages/_form.html.erb
@@ -37,7 +37,7 @@
     </div>
 
     <% if Refinery::Pages.use_custom_slugs %>
-      <div class="sidebar-section no-border">
+      <div class="sidebar-section">
         <div class="sidebar-section-heading">
           <div class="url">http://stpatsvan.com/<span class="slug" contenteditable="true">page-title</span>/</div>
         </div>
@@ -51,10 +51,10 @@
       </div>
     <% end %>
 
-    <div class="sidebar-section">
+    <div class="sidebar-section no-border">
       <button type="button" class="collapse-toggle collapsed" data-toggle="collapse" data-target="#template-collapse" aria-expanded="true" aria-controls="demo">
         <div class="sidebar-section-heading">
-          <i class="gcicon gcicon-gears"></i> <span class="flex-1">Page Template</span> <i class="gcicon gcicon-down"></i>
+          <i class="gcicon gcicon-index"></i> <span class="flex-1">Page Template</span> <i class="gcicon gcicon-down"></i>
         </div>
       </button>
       <div id="template-collapse" class="collapse">
