--- a/app/views/refinery/admin/pages/_form_advanced_options.html.erb
+++ b/app/views/refinery/admin/pages/_form_advanced_options.html.erb
@@ -3,7 +3,7 @@
 <div class="sidebar-section">
   <button type="button" class="collapse-toggle collapsed" data-toggle="collapse" data-target="#redirect-collapse" aria-expanded="true" aria-controls="demo">
     <div class="sidebar-section-heading">
-      <i class="gcicon gcicon-gears"></i> <span class="flex-1">Forwarding &amp; Redirection</span> <i class="gcicon gcicon-down"></i>
+      <i class="gcicon gcicon-sliders"></i> <span class="flex-1">Forwarding &amp; Redirection</span> <i class="gcicon gcicon-down"></i>
     </div>
   </button>
   <div id="redirect-collapse" class="collapse">
@@ -40,7 +40,7 @@
 <div class="sidebar-section">
   <button type="button" class="collapse-toggle collapsed" data-toggle="collapse" data-target="#misc-collapse" aria-expanded="true" aria-controls="demo">
     <div class="sidebar-section-heading">
-      <i class="gcicon gcicon-gears"></i> <span class="flex-1">Menu &amp; Parent</span> <i class="gcicon gcicon-down"></i>
+      <i class="gcicon gcicon-sitemap"></i> <span class="flex-1">Menu &amp; Parent</span> <i class="gcicon gcicon-down"></i>
     </div>
   </button>
   <div id="misc-collapse" class="collapse">
