--- a/app/views/refinery/admin/users/update_password.html.erb
+++ b/app/views/refinery/admin/users/update_password.html.erb
@@ -13,11 +13,13 @@
              :object => @user,
              :include_object_name => true %>
   <div class='form-group'>
-    <%= f.password_field :password, :placeholder => 'Password', :class => 'form-control input-lg', 'autofocus' => 'autofocus' %></p>
+    <%= f.password_field :password, :placeholder => 'Password', :class => 'form-control input-lg', 'autofocus' => 'autofocus', 'data-val-field' => 'password', 'data-validate' => 'required_w_name' %></p>
+    <span class='tip text-danger'></span>
   </div>
 
   <div class="form-group">
-    <%= f.password_field :password_confirmation, :placeholder => 'Password confirmation', :class => 'form-control input-lg' %></p>
+    <%= f.password_field :password_confirmation, :placeholder => 'Password confirmation', :class => 'form-control input-lg', 'data-val-field' => 'password confirmation', 'data-validate' => 'required_w_name' %></p>
+    <span class='tip text-danger'></span>
   </div>
 
   <div class="form-group">
